<resources>
    <string name="app_name">About\u0020Cosmic-OS</string>
    <string name="title_activity_scrolling">About\u0020Cosmic-OS</string>
    <string name="large_text">
        Cosmic-OS is an CAF based custom aftermarket firmware distribution for Android™️ devices with OMS support. Our aim is to deliver light-speed performance with plenty of features, a high level of fluidity, and good battery life. We hope that you\'ll love our work, and help us in making it even better in the future.
    </string>
    <string name="action_settings">Settings</string>
    <string name="sick">sick</string>
    <string name="a6000">A6000</string>
    <string name="opx">OPX</string>
    <string name="z2">Z2+</string>
    <string name="yureka">Yureka</string>
    <string name="yuphoria">Yuphoria\u0020\u0020\u0020</string>
    <string name="j5">J5</string>
    <string name="wbl7511">wbl7511\u0020\u0020\u0020\u0020</string>
    <string name="op3">op3</string>
    <string name="rn3">RN3</string>
    <string name="bullhead">Bullhead\u0020\u0020\u0020\u0020\u0020</string>
    <string name="maintainers">Maintainers</string>
    <string name="cosmic_os">cosmic_os</string>
    <string name="device_1">device_1</string>
    <string name="device_2">device_2</string>
    <string name="device_3">device_3</string>
    <string name="device_4">device_4</string>
    <string name="device_5">device_5</string>
    <string name="device_6">device_6</string>
    <string name="device_7">device_7</string>
    <string name="device_8">device_8</string>
    <string name="device_9">device_9</string>
    <string name="device_10">device_10</string>
    <string name="toolbar">toolbar</string>
    <string name="features">Clock and Date customisation\n  Network Traffic Indicator\n  Navigation\n  Lock Screen\n  Wakelock blocker\n  And more #explorethecosmos</string>
    <string name="about_header">Explore the galaxy and find what suits you best.</string>
    <string name="features_header">#Android 7.1.2 Nougat\n #Galaxy Customisations\n #Substratum\n</string>
    <string name="nkey_features">Key Features</string>
    <string name="link_to_rom">Link To ROM</string>
    <string name="sagar_shah">Sagar Shah</string>
    <string name="founder_lead_developer">Founder/Lead Developer</string>
    <string name="nico_franke">Nico Franke</string>
    <string name="contributor_maintainer">Contributor/Maintainer</string>
    <string name="lineardesign">LinearDesign</string>
    <string name="graphics_designer">Graphics Designer</string>
    <string name="parthasarathy_zeromod">Parthasarathy [zeromod]</string>
    <string name="application_developer_maintainer">Application Developer/Maintainer</string>
    <string name="Parthasarathy">Parthasarathy</string>
    <string name="Maintainer_Yureka">Maintainer/Yureka</string>
    <string name="SagarShah">Sagar Shah</string>
    <string name="Maintainer_Yuphoria">Maintainer/Yuphoria</string>
    <string name="SidSun">Sid Sun</string>
    <string name="Maintainer_Bullhead">Maintainer/Bullhead</string>
    <string name="IacobIonut">Iacob Ionut</string>
    <string name="Maintainer_wbl7511">Maintainer/wbl7511</string>
    <string name="RohitSinghNegi">Rohit Singh Negi</string>
    <string name="Maintainer_Kenzo">Maintainer/Kenzo</string>
    <string name="MahekThaker">Mahek Thaker</string>
    <string name="Maintainer_A6000">Maintainer/A6000</string>
    <string name="NicoFranke">Nico Franke</string>
    <string name="Maintainer_OPX">Maintainer/OPX</string>
    <string name="Maintainer_Z2Plus">Maintainer/Z2 Plus</string>
    <string name="cos">COSMIC-OS</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_summary">Since the last update</string>
    <string name="changelog_error">Unable to load changelog</string>
    <string name="changelog">ChangeLog</string>
    <string name="git">git</string>
    <string name="gplus">gplus</string>
</resources>
