<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cosmicos.aboutcosmic_os.MainActivity"
    android:background="@drawable/bg2"
    >
    <ImageButton
        android:background="@drawable/cosmicsun"
        android:id="@+id/cosmic_os"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:transitionName="sick"
        android:contentDescription="@string/cosmic_os" />
    <ImageButton
        android:id="@+id/device_1"
        android:background="@drawable/planet01"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="23dp"
        android:clickable="true"
        android:layout_above="@+id/cosmic_os"
        android:layout_toStartOf="@+id/cosmic_os"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/device_1" />
    <ImageButton
        android:id="@+id/device_2"
        android:background="@drawable/planet03"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/device_1"
        android:layout_toEndOf="@+id/cosmic_os"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/device_2" />
    <ImageButton
        android:id="@+id/device_3"
        android:background="@drawable/planet04"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/device_2"
        android:layout_toEndOf="@+id/device_2"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/device_3" />
    <ImageButton
        android:id="@+id/device_4"
        android:background="@drawable/planet10"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/device_3"
        android:layout_toStartOf="@+id/device_1"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/device_4" />

    <ImageButton
        android:id="@+id/device_5"
        android:background="@drawable/planet06"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/device_4"
        android:layout_toStartOf="@+id/cosmic_os"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/device_5" />
    <ImageButton
        android:id="@+id/device_6"
        android:background="@drawable/planet07"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/cosmic_os"
        android:layout_toEndOf="@+id/cosmic_os"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/device_6" />
    <ImageButton
        android:id="@+id/device_7"
        android:background="@drawable/planet08"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:layout_alignTop="@+id/device_6_name"
        android:layout_toStartOf="@+id/device_1_name"
        android:layout_marginEnd="20dp"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/device_7" />
    <ImageButton
        android:id="@+id/device_8"
        android:background="@drawable/planet09"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/cosmic_os"
        android:layout_below="@+id/device_7"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/device_8" />
    <ImageButton
        android:id="@+id/device_9"
        android:background="@drawable/planet05"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/device_8"
        android:layout_toEndOf="@+id/device_6"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/device_9"/>
    <ImageButton
        android:id="@+id/device_10"
        android:background="@drawable/planet11"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/device_9"
        android:layout_toEndOf="@+id/device_8"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/device_10" />
    <TextView
        android:id="@+id/device_10_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a6000"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/device_10"
        android:layout_alignEnd="@+id/device_10" />
    <TextView
        android:id="@+id/device_9_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/device_9"
        android:layout_below="@+id/device_9"
        android:text="@string/opx"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_alignStart="@+id/device_9"
        android:fontFamily="sans-serif-light"/>
    <TextView
        android:id="@+id/device_8_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/device_8"
        android:layout_alignStart="@+id/device_8"
        android:layout_below="@+id/device_8"
        android:text="@string/z2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-light"/>
    <TextView
        android:id="@+id/device_7_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yureka"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_below="@+id/device_7"
        android:layout_alignStart="@+id/device_7"
        android:fontFamily="sans-serif-light"/>

    <TextView
        android:id="@+id/device_6_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/device_9"
        android:layout_below="@+id/device_6"
        android:layout_marginEnd="21dp"
        android:fontFamily="sans-serif-light"
        android:maxLines="1"
        android:text="@string/yuphoria"
        android:textAlignment="center"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/device_5_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/device_5"
        android:layout_alignStart="@+id/device_5"
        android:layout_below="@+id/device_5"
        android:text="@string/j5"
        android:visibility="gone"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-light"/>
    <TextView
        android:id="@+id/device_4_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_4"
        android:layout_toStartOf="@+id/device_5"
        android:fontFamily="sans-serif-light"
        android:text="@string/wbl7511"
        android:textAlignment="center"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/device_3_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/device_3"
        android:layout_below="@+id/device_3"
        android:layout_toEndOf="@+id/device_2"
        android:text="@string/op3"
        android:visibility="gone"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/device_2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/device_2"
        android:layout_alignStart="@+id/device_2"
        android:layout_below="@+id/device_2"
        android:text="@string/rn3"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-light"/>
    <TextView
        android:id="@+id/device_1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_1"
        android:layout_toStartOf="@+id/cosmic_os"
        android:fontFamily="sans-serif-light"
        android:text="@string/bullhead"
        android:textAlignment="center"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/maintainers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/maintainers"
        android:textSize="28sp"
        android:textColor="#FCE4EC"
        android:fontFamily="sans-serif-light"
        />
</RelativeLayout>
