<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/sagar_team"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sagar_shah"
            android:textColor="@android:color/black"
            android:layout_margin="8dp"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/founder_lead_developer"
            android:textAlignment="center"
            android:textColor="@android:color/black" />
        </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/nico_team" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/nico_franke"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/contributor_maintainer"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-light"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/josh_team"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lineardesign"
                    android:textColor="@android:color/black"
                    android:layout_margin="8dp"
                    android:textAlignment="center" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graphics_designer"
                    android:textColor="@android:color/black"
                    android:layout_margin="8dp"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-light" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/partha_team"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parthasarathy_zeromod"
                    android:textColor="@android:color/black"
                    android:layout_margin="8dp"
                    android:textAlignment="center" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/application_developer_maintainer"
                    android:textColor="@android:color/black"
                    android:layout_margin="8dp"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-light" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>