<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="2dp"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/large_text"
                        android:textColor="@android:color/black"
                        android:layout_margin="8dp"
                        android:fontFamily="sans-serif-light"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="2dp"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_header"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/features_header"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-light"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nkey_features"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/features"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="2dp"
            android:layout_margin="8dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/git_cos"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="32dp"
                    android:src="@drawable/github" />
                <ImageView
                    android:id="@+id/gplus_cos"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/gplus" />
                <ImageView
                    android:id="@+id/telegram_cos"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/telegram" />
                <ImageView
                    android:id="@+id/web_cos"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/internet" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
